--- a/Cap02/Notebooks/DSA-Python-Cap02-Exercicios.ipynb
+++ b/Cap02/Notebooks/DSA-Python-Cap02-Exercicios.ipynb
@@ -27,11 +27,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "list = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+    "\n",
+    "for number in range(10):\n",
+    "    print(list[number])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Exercício 2 - Crie uma lista de 5 objetos e imprima na tela"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list = []\n",
+    "\n",
+    "for number in range(1, 6):\n",
+    "    list.append(number)\n",
+    "    \n",
+    "list"
    ]
   },
   {
@@ -41,6 +95,31 @@
    "outputs": [],
    "source": [
     "# Exercício 3 - Crie duas strings e concatene as duas em uma terceira string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Everton Quadros'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "first_name = 'Everton'\n",
+    "last_name = 'Quadros'\n",
+    "\n",
+    "full_name = first_name + ' ' + last_name\n",
+    "\n",
+    "full_name"
    ]
   },
   {
@@ -55,11 +134,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tupla = (1, 2, 2, 3, 4, 4, 4, 5)\n",
+    "tupla.count(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Exercício 5 - Crie um dicionário vazio e imprima na tela"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hash = {}\n",
+    "\n",
+    "hash"
    ]
   },
   {
@@ -73,11 +195,55 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'key1': 1, 'key2': 2, 'key3': 3}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hash = {'key1': 1, 'key2': 2, 'key3': 3}\n",
+    "\n",
+    "hash"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Exercício 7 - Adicione mais um elemento ao dicionário criado no exercício anterior e imprima na tela"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'key1': 1, 'key2': 2, 'key3': 3, 'key4': 4}"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hash['key4'] = 4\n",
+    "\n",
+    "hash"
    ]
   },
   {
@@ -88,6 +254,28 @@
    "source": [
     "# Exercício 8 - Crie um dicionário com 3 chaves e 3 valores. Um dos valores deve ser uma lista de 2 elementos numéricos. \n",
     "# Imprima o dicionário na tela."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'key1': 1, 'key2': 2, 'key3': [1, 2]}"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hash = {'key1': 1, 'key2': 2, 'key3': [1, 2]}\n",
+    "\n",
+    "hash"
    ]
   },
   {
@@ -104,12 +292,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Banana', (1, 2), {'key1': 1, 'key2': 2}, 2.5]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list = ['Banana', (1, 2), {'key1': 1, 'key2': 2}, 2.5]\n",
+    "\n",
+    "list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Exercício 10 - Considere a string abaixo. Imprima na tela apenas os caracteres da posição 1 a 18.\n",
     "frase = 'Cientista de Dados é o profissional mais sexy do século XXI'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ientista de Dados\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(frase[1:18])"
    ]
   },
   {
