--- a/Cap03/Notebooks/DSA-Python-Cap03-Exercicios-Loops-Condiconais.ipynb
+++ b/Cap03/Notebooks/DSA-Python-Cap03-Exercicios-Loops-Condiconais.ipynb
@@ -19,9 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Exercício 1 - Crie uma estrutura que pergunte ao usuário qual o dia da semana. Se o dia for igual a Domingo ou \n",
@@ -30,13 +28,55 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Qual o dia da semana?Domingo\n",
+      "Hoje é dia de descanso\n"
+     ]
+    }
+   ],
+   "source": [
+    "day = input(\"Qual o dia da semana?\")\n",
+    "\n",
+    "if (day == \"Sábado\" or day == \"Domingo\"):\n",
+    "    print(\"Hoje é dia de descanso\")\n",
+    "else:\n",
+    "    print(\"Você precisa trabalhar!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Exercício 2 - Crie uma lista de 5 frutas e verifique se a fruta 'Morango' faz parte da lista"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruits = ['Banana', 'Laranja', 'Morango', 'Tangerina', 'Lichia']\n",
+    "\n",
+    "for fruit in fruits:\n",
+    "    if(fruit=='Morango'):\n",
+    "        print(True)"
    ]
   },
   {
@@ -53,6 +93,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 4, 6, 8]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tuple = (1, 2, 3, 4)\n",
+    "list = []\n",
+    "\n",
+    "for i in tuple:\n",
+    "    list.append(i * 2)\n",
+    "\n",
+    "list"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
@@ -60,6 +126,51 @@
    "outputs": [],
    "source": [
     "# Exercício 4 - Crie uma sequência de números pares entre 100 e 150 e imprima na tela"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n",
+      "102\n",
+      "104\n",
+      "106\n",
+      "108\n",
+      "110\n",
+      "112\n",
+      "114\n",
+      "116\n",
+      "118\n",
+      "120\n",
+      "122\n",
+      "124\n",
+      "126\n",
+      "128\n",
+      "130\n",
+      "132\n",
+      "134\n",
+      "136\n",
+      "138\n",
+      "140\n",
+      "142\n",
+      "144\n",
+      "146\n",
+      "148\n",
+      "150\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(100,151):\n",
+    "    if(i % 2 == 0):\n",
+    "        print(i)\n",
+    "        "
    ]
   },
   {
@@ -76,6 +187,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "40\n",
+      "39\n",
+      "38\n",
+      "37\n",
+      "36\n"
+     ]
+    }
+   ],
+   "source": [
+    "temperatura = 40\n",
+    "\n",
+    "while(temperatura>35):\n",
+    "    print(temperatura)\n",
+    "    temperatura -= 1"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
@@ -84,6 +220,51 @@
    "source": [
     "# Exercício 6 - Crie uma variável chamada contador = 0. Enquanto counter for menor que 100, imprima os valores na tela,\n",
     "# mas quando for encontrado o valor 23, interrompa a execução do programa"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "14\n",
+      "15\n",
+      "16\n",
+      "17\n",
+      "18\n",
+      "19\n",
+      "20\n",
+      "21\n",
+      "22\n"
+     ]
+    }
+   ],
+   "source": [
+    "cont = 0\n",
+    "\n",
+    "while(cont<100):\n",
+    "    print(cont)\n",
+    "    cont += 1\n",
+    "    if(cont == 23):\n",
+    "        break"
    ]
   },
   {
@@ -100,37 +281,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Exercício 8 - Transforme o resultado desta função range em uma lista: range(5, 45, 2)\n",
-    "nums = range(5, 45, 2)"
+    "list = []\n",
+    "num = 4\n",
+    "\n",
+    "while(num <= 2):\n",
+    "    if(num % 2 == 0):\n",
+    "        list.append(num)\n",
+    "list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[5, 7, 9, 11, 13, 15, 17, 19, 21, 23, 25, 27, 29, 31, 33, 35, 37, 39, 41, 43]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Exercício 8 - Transforme o resultado desta função range em uma lista: range(5, 45, 2)\n",
+    "nums = range(5, 45, 2)\n",
+    "list = []\n",
+    "\n",
+    "for i in nums:\n",
+    "    list.append(i)\n",
+    "    \n",
+    "list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Qual a temperatura? 28\n",
+      "Busque seus casacos.\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercício 9 - Faça a correção dos erros no código abaixo e execute o programa. Dica: são 3 erros.\n",
     "temperatura = float(input('Qual a temperatura? '))\n",
-    "if temperatura > 30\n",
-    "print('Vista roupas leves.')\n",
-    "else\n",
+    "if temperatura > 30:\n",
+    "    print('Vista roupas leves.')\n",
+    "else:\n",
     "    print('Busque seus casacos.')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Exercício 10 - Faça um programa que conte quantas vezes a letra \"r\" aparece na frase abaixo. Use um placeholder na \n",
     "# sua instrução de impressão\n",
@@ -138,7 +378,9 @@
     "# “É melhor, muito melhor, contentar-se com a realidade; se ela não é tão brilhante como os sonhos, tem pelo menos a \n",
     "# vantagem de existir.” (Machado de Assis)\n",
     "\n",
-    "frase = \"É melhor, muito melhor, contentar-se com a realidade; se ela não é tão brilhante como os sonhos, tem pelo menos a vantagem de existir.\" "
+    "frase = \"É melhor, muito melhor, contentar-se com a realidade; se ela não é tão brilhante como os sonhos, tem pelo menos a vantagem de existir.\"\n",
+    "\n",
+    "frase.count('r')"
    ]
   },
   {
