--- a/Cap04/Notebooks/DSA-Python-Cap04-05-Map.ipynb
+++ b/Cap04/Notebooks/DSA-Python-Cap04-05-Map.ipynb
@@ -19,9 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Criando duas funções\n",
@@ -38,9 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Criando uma lista\n",
@@ -55,7 +51,7 @@
     {
      "data": {
       "text/plain": [
-       "<map at 0x10c2c8438>"
+       "<map at 0x7f2b484f9ac8>"
       ]
      },
      "execution_count": 3,
@@ -120,7 +116,7 @@
     {
      "data": {
       "text/plain": [
-       "<map at 0x10c2c8198>"
+       "<map at 0x7f2b484f95c0>"
       ]
      },
      "execution_count": 6,
