--- a/Cap04/Notebooks/DSA-Python-Cap04-09-Zip.ipynb
+++ b/Cap04/Notebooks/DSA-Python-Cap04-09-Zip.ipynb
@@ -19,9 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Criando duas listas\n",
@@ -37,7 +35,7 @@
     {
      "data": {
       "text/plain": [
-       "<zip at 0x10d327c48>"
+       "<zip at 0x7f5570a00bc8>"
       ]
      },
      "execution_count": 2,
@@ -95,9 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Criando duas listas\n",
