--- a/Cap04/Notebooks/DSA-Python-Cap04-Exercicios-Solucao.ipynb
+++ b/Cap04/Notebooks/DSA-Python-Cap04-Exercicios-Solucao.ipynb
@@ -208,22 +208,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2, 3, 5, 7]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[2, 3, 5, 7]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Exercício 7 - Usando a função filter(), encontre os valores que são comuns às duas listas abaixo.\n",
     "a = [1,2,3,5,7,9]\n",
     "b = [2,3,5,6,7,8]\n",
-    "print (list(filter(lambda x: x in a, b)))"
+    "list(filter(lambda x: x in a, b))"
    ]
   },
   {
